Fix section's two images alignment with respect to to sub-titles
When changing the displays size or page size we need to make sure that the images are adaptable.
Meaning when we go to an ipad or a phone display the images must remain in the horizontal middle with respect to the sub-sections

--- a/styles.css
+++ b/styles.css
@@ -76,7 +76,6 @@ body {
 }
 
 .paragraphsize {
-  width: 300px;
   height: 200px;
 }
 
@@ -90,24 +89,31 @@ body {
 }
 
 .easytwouse_size {
+  max-width: 100%;
+  max-height: 100%;
   display: block;
   width: 10rem;
-  margin-left: 12.5rem;
-  margin-right: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .recommendations_size {
   width: 20rem;
+  max-width: 100%;
+  max-height: 100%;
   display: block;
-  margin-left: 8.5rem;
-  margin-right: 0;
+  margin-left: auto;
+  margin-right: auto;
+
 }
 
 .guranteedtowork {
   width: 10rem;
+  max-width: 100%;
+  max-height: 100%;
   display: block;
-  margin-left: 12.5rem;
-  margin-right: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* The testimonies section */
